1.2.6
==================

 * Changed a msgid for the url field of events to have a distinct value.
   This closes http://dev.plone.org/plone/ticket/8197.
   [hannosch]

 * Changed "Contained Collections" text to "Inside this section".
   This closes http://dev.plone.org/plone/ticket/8106.
   [davisagli]

 * Changed default topic view to alway show body text (if available) even if the
   collection does not have any results. This closes
   http://dev.plone.org/plone/ticket/8270.
   [dunlapm]

1.2.5 2008-04-22
==================

 * Remove leading whitespace in hrefs.
   [wichert]

 * Corrected i18n markup in schemata.py for the nextprevious field. This closes
   http://dev.plone.org/plone/ticket/7517.
   [hannosch]

1.2.4 2008-01-03
==================

 * Backported fix for http://dev.plone.org/archetypes/ticket/763: The edit
   tab in ZMI should not be displayed for ATImage/ATFile objects.
   [deo]

 * Fixed #7467 http://dev.plone.org/plone/ticket/7467: Modify
   "Item Type" criterion to store the untranslated Type instead
   of portal_type, but to show the translated Type to the user.
   Added a browser test for #6981
   http://dev.plone.org/plone/ticket/6981 which is currently
   disabled because the test browser does not translate pages
   [sirgarr]

1.2.3 2007-12-02
==================

 * Fixed http://dev.plone.org/plone/ticket/7102: uploading xhtml
   files was not working correctly.  Thanks to lucie for the patch.
   [alecm]

 * Fixed bug in portaltype criterion - it used portal type Title as both
   key and value in multiselection widget, but Id and Title should be used.
   Title (as DisplayList key) was incorrectly translated and caused #6981
   http://dev.plone.org/plone/ticket/6981
   [naro, jensens]

 * Fix Unicode encode error in formatCatalogMetadata.py when atct_topic_view.py
   uses it to display in a table a text field (like 'location') whose contents
   can't be encoded to ascii.
   http://dev.plone.org/plone/ticket/7237
   [stevem]
