@@ -153,20 +153,14 @@ class ATDocumentBase(ATCTContent, HistoryAwareMixin):
         * hook into mxTidy an replace the value with the tidied value
         """
         field = self.getField('text')
-        # XXX this is ugly
+        
         # When an object is initialized the first time we have to 
         # set the filename and mimetype.
-        # In the case the value is empty/None we must not set the value because
-        # it will overwrite uploaded data like a pdf file.
-        if (value is None or value == ""):
-            if not field.getRaw(self):
-                # set mimetype and file name although the fi
-                if 'mimetype' in kwargs and kwargs['mimetype']:
-                    field.setContentType(self, kwargs['mimetype'])
-                if 'filename' in kwargs and kwargs['filename']:
-                    field.setFilename(self, kwargs['filename'])
-            else:
-                return
+        if not value and not field.getRaw(self):
+            if 'mimetype' in kwargs and kwargs['mimetype']:
+                field.setContentType(self, kwargs['mimetype'])
+            if 'filename' in kwargs and kwargs['filename']:
+                field.setFilename(self, kwargs['filename'])
 
         # hook for mxTidy / isTidyHtmlWithCleanup validator
         tidyOutput = self.getTidyOutput(field)
